Changing the approach again because of some codegen corner cases
